--- a/structure_3.html
+++ b/structure_3.html
@@ -109,7 +109,7 @@
                     <table>
                         <tbody>
                             <tr>
-                                <td class="structure-bg-01"><a href="windows/service.html" class="service-link">Департамент химмотологии и перспективных разработок ГСМ (300)</a></td>
+                                <td class="structure-bg-01"><a href="windows/service-2.html" class="service-link">Департамент химмотологии и перспективных разработок ГСМ (300)</a></td>
                                 <td class="structure-bg-02"><a href="windows/service.html" class="service-link">Центр исследований химмотологических процессов и перспективных разработок</a></td>
                             </tr>
                             <tr>
