--- a/services.html
+++ b/services.html
@@ -108,7 +108,7 @@
                     <li>Проектирование и реализация новых технологий быстровозводимых зданий с применением несъемной опалубки из стекломагнезитового листа в сочетании с монолитной твердеющей заливкой модифицированным вермикулитом</li>
                     <li>Осуществление технического надзора с выдачей технологического заключения; определение несущей способности узлов и конструкций зданий, состояния инженерных коммуникаций, общего технического состояния</li>
                 </ul>
-                <p><a href="windows/service.html" class="btn btn-2 service-link">Запрос на услугу</a></p>
+                <p><a href="windows/order.html" class="btn btn-2 service-link">Запрос на услугу</a></p>
 
                 <hr />
                 <h2>Центр экономики минерального сырья</h2>
@@ -120,7 +120,7 @@
                     <li>Горно-экономический аудит и экспертиза запасов твердых полезных ископаемых; инженерные, консалтинговые услуги</li>
                     <li>Научно-исследовательские работы и эксперименты, методическая деятельность и нормативно-правовые разработки</li>
                 </ul>
-                <p><a href="windows/service.html" class="btn btn-2 service-link">Запрос на услугу</a></p>
+                <p><a href="windows/order.html" class="btn btn-2 service-link">Запрос на услугу</a></p>
 
                 <hr />
                 <h2>Центр энергоэффективности</h2>
@@ -132,7 +132,7 @@
                     <li>Технико-экономическое обоснование и экспертиза финансово-правовой деятельности предприятий энергетики</li>
                     <li>Разработка проектов строительства, модернизации, реконструкции</li>
                 </ul>
-                <p><a href="windows/service.html" class="btn btn-2 service-link">Запрос на услугу</a></p>
+                <p><a href="windows/order.html" class="btn btn-2 service-link">Запрос на услугу</a></p>
             </div>
             <!-- content END -->
 
