--- a/structure.html
+++ b/structure.html
@@ -108,51 +108,51 @@
                 <div class="structure-list">
                     <div class="structure-list-inner">
                         <div class="structure-item">
-                            <div class="structure-item-name"><a href="windows/service.html">Департамент химмотологии и перспективных разработок ГСМ (300)</a></div>
+                            <div class="structure-item-name"><a href="windows/service.html" class="service-link">Департамент химмотологии и перспективных разработок ГСМ (300)</a></div>
                             <div class="structure-item-descr">Координация работ по разработке востребованных горюче-смазочных материалов (далее – ГСМ), преимущественно на базе отечественных компонентов и технологий, для военной техники и техники двойного применения</div>
                         </div>
                         <div class="structure-item">
-                            <div class="structure-item-name"><a href="windows/service.html">Центр исследований химмотологических процессов и перспективных разработок</a></div>
+                            <div class="structure-item-name"><a href="windows/service-1.html" class="service-link">Центр исследований химмотологических процессов и перспективных разработок</a></div>
                             <div class="structure-item-descr">Подготовка и переподготовка специалистов предприятий оборонно-промышленного комплекса в области современных методов стандартизации, управления качеством и метрологического обеспечения продукции</div>
                         </div>
                         <div class="structure-item">
-                            <div class="structure-item-name"><a href="windows/service.html">Научно-технический центр авиационного оборудования</a></div>
+                            <div class="structure-item-name"><a href="windows/service-2.html" class="service-link">Научно-технический центр авиационного оборудования</a></div>
                             <div class="structure-item-descr">Создание новых и модернизация устаревших систем и агрегатов пассажирских, транспортных и боевых летательных аппаратов для обеспечения их конкурентоспособности</div>
                         </div>
                         <div class="structure-item">
-                            <div class="structure-item-name"><a href="windows/service.html">Научно-технический центр электромеханических систем</a></div>
+                            <div class="structure-item-name"><a href="windows/service.html" class="service-link">Научно-технический центр электромеханических систем</a></div>
                             <div class="structure-item-descr">Научно-технический центр осуществляет деятельность по разработке, изготовлению, испытанию и внедрению исполнительных электромеханических систем и агрегатов для существующих и перспективных образцов авиационной техники</div>
                         </div>
                         <div class="structure-item">
-                            <div class="structure-item-name"><a href="windows/service.html">Центр гибких трубопроводов</a></div>
+                            <div class="structure-item-name"><a href="windows/service-1.html" class="service-link">Центр гибких трубопроводов</a></div>
                             <div class="structure-item-descr">Работы по глубокой модернизации шлангов на основе резинового рукава с металлическими оплетками для обеспечения изделий, находящихся в эксплуатации</div>
                         </div>
                         <div class="structure-item">
-                            <div class="structure-item-name"><a href="windows/service.html">Центр информационных технологий оборонно-промышленного комплекса</a></div>
+                            <div class="structure-item-name"><a href="windows/service-2.html" class="service-link">Центр информационных технологий оборонно-промышленного комплекса</a></div>
                             <div class="structure-item-descr">Пдготовка предложений по разработке нормативных правовых актов и научно-методической базы, необходимых для создания и внедрения информационных технологий на предприятиях ОПК, в частности технологий информационного сопровождения продукции на всех этапах жизненного цикла (ИПИ-технологий), а также компьютерных технологий обеспечения качества продукции военного назначения (ПВН)</div>
                         </div>
                         <div class="structure-item">
-                            <div class="structure-item-name"><a href="windows/service.html">Центр испытаний стандартизованных изделий</a></div>
+                            <div class="structure-item-name"><a href="windows/service.html" class="service-link">Центр испытаний стандартизованных изделий</a></div>
                             <div class="structure-item-descr">Установка предназначена для проведения испытаний нержавеющих шарнирных подшипников с МФП прокладкой путем обеспечения возвратно-вращательного движения на заданный угол внутреннего кольца по отношению к наружному</div>
                         </div>
                         <div class="structure-item">
-                            <div class="structure-item-name"><a href="windows/service.html">Центр комплектации и логистики</a></div>
+                            <div class="structure-item-name"><a href="windows/service-1.html" class="service-link">Центр комплектации и логистики</a></div>
                             <div class="structure-item-descr">Внешнеэкономическая деятельность в области организации сервисного обслуживания изделий авиационной техники российского производства (оборонного, гражданского и двойного назначения), начиная с поставки изделий авиационной техники, её сопровождения (ремонт и модернизация) и заканчивая проектированием и созданием ремонтных производств (сервисных центров) и офсетных производств на территории заказчика</div>
                         </div>
                         <div class="structure-item">
-                            <div class="structure-item-name"><a href="windows/service.html">Центр новых технологий</a></div>
+                            <div class="structure-item-name"><a href="windows/service-2.html" class="service-link">Центр новых технологий</a></div>
                             <div class="structure-item-descr">Созданы новые композиционные высокопрочные материалы с основой из низколегированных сталей и плакирующих слоев из коррозионно-стойких сталей для применения в машиностроении, промышленном и жилищном строительстве, химической и пищевой промышленности, атомной энергетике, судостроении и др.</div>
                         </div>
                         <div class="structure-item">
-                            <div class="structure-item-name"><a href="windows/service.html">Центр сертификации</a></div>
+                            <div class="structure-item-name"><a href="windows/service.html" class="service-link">Центр сертификации</a></div>
                             <div class="structure-item-descr">Центр сертификации ФГУП «НИИСУ» был создан во исполнение приказов Минпромторга (декабрь 2009 г.; май 2010 г.; сентябрь 2010 г.), направленных на повышение качества продукции ОПК. Одним из этих приказов ФГУП «НИИСУ» был определен головной организацией в части обеспечения работ по научно-методическому и программно-техническому сопровождению комплекса долгосрочных мероприятий по повышению качества продукции ОПК.</div>
                         </div>
                         <div class="structure-item">
-                            <div class="structure-item-name"><a href="windows/service.html">Центр стандартизации, унификации, каталогизации и метрологического обеспечения</a></div>
+                            <div class="structure-item-name"><a href="windows/service-1.html" class="service-link">Центр стандартизации, унификации, каталогизации и метрологического обеспечения</a></div>
                             <div class="structure-item-descr">Созданы новые композиционные высокопрочные материалы с основой из низколегированных сталей и плакирующих слоев из коррозионно-стойких сталей для применения в машиностроении, промышленном и жилищном строительстве, химической и пищевой промышленности, атомной энергетике, судостроении и др.</div>
                         </div>
                         <div class="structure-item">
-                            <div class="structure-item-name"><a href="windows/service.html">Центр экономической экспертизы цен</a></div>
+                            <div class="structure-item-name"><a href="windows/service-2.html" class="service-link">Центр экономической экспертизы цен</a></div>
                             <div class="structure-item-descr">Согласно приказу Министерства промышленности и торговли Российской Федерации от 30 декабря 2008 г. № 478 и решению Министра промышленности и торговли Российской Федерации от 20 февраля 2014 г. ФГУП «Научно-исследовательский институт стандартизации и унификации» определен ведущей научно-исследовательской организацией оборонно-промышленного комплекса по направлению: экономическая экспертиза цен на продукцию авиационной промышленности, поставляемой по государственному оборонному заказу, при разработке, производстве, эксплуатации, ремонте и утилизации, и при разработке, производстве, эксплуатации и утилизации обычных вооружений, боеприпасов и спецхимии.</div>
                         </div>
                     </div>
