--- a/typography.html
+++ b/typography.html
@@ -200,7 +200,7 @@
                             <div class="sert-list-preview"><span>Изображение</span><div><img src="files/sert-01.jpg" alt="" width="161" height="226" /></div></div>
                             <div class="sert-list-name">Сертификат afaq<br />№2013/53088.1</div>
                         </a>
-                        <a href="windows/service.html">
+                        <a href="windows/sert.html">
                             <div class="sert-list-preview"><span>Изображение</span></div>
                             <div class="sert-list-name">Сертификат afaq<br />№2013/53088.1</div>
                         </a>
