--- a/structure_3.html
+++ b/structure_3.html
@@ -109,28 +109,41 @@
                     <table>
                         <tbody>
                             <tr>
-                                <td class="structure-bg-01"><a href="windows/service-2.html" class="service-link">Департамент химмотологии и перспективных разработок ГСМ (300)</a></td>
-                                <td class="structure-bg-02"><a href="windows/service.html" class="service-link">Центр исследований химмотологических процессов и перспективных разработок</a></td>
+                                <td class="structure-bg-01"><a href="windows/service-2.html" class="service-link" rel="list-1" title="Департамент химмотологии и перспективных разработок ГСМ (300)">Департамент химмотологии и перспективных разработок ГСМ (300)</a></td>
+                                <td class="structure-bg-02"><a href="windows/service.html" class="service-link" rel="list-1" title="Центр исследований химмотологических процессов и перспективных разработок">Центр исследований химмотологических процессов и перспективных разработок</a></td>
                             </tr>
                             <tr>
-                                <td class="structure-bg-03"><a href="windows/service.html" class="service-link">Научно-технический центр авиационного оборудования</a></td>
-                                <td class="structure-bg-04"><a href="windows/service.html" class="service-link">Научно-технический центр электромеханических систем</a></td>
+                                <td class="structure-bg-03"><a href="windows/service.html" class="service-link" rel="list-1" title="Научно-технический центр авиационного оборудования из title">Научно-технический центр авиационного оборудования</a></td>
+                                <td class="structure-bg-04"><a href="windows/service.html" class="service-link" rel="list-1">Научно-технический центр электромеханических систем без title</a></td>
                             </tr>
                             <tr>
-                                <td class="structure-bg-05"><a href="windows/service.html" class="service-link">Центр гибких трубопроводов</a></td>
-                                <td class="structure-bg-06"><a href="windows/service.html" class="service-link">Центр информационных технологий оборонно-промышленного комплекса</a></td>
+                                <td class="structure-bg-05"><a href="windows/service.html" class="service-link" rel="list-1" title="Центр гибких трубопроводов">Центр гибких трубопроводов с rel</a></td>
+                                <td class="structure-bg-06"><a href="windows/service.html" class="service-link" title="Центр информационных технологий оборонно-промышленного комплекса">Центр информационных технологий оборонно-промышленного комплекса без rel</a></td>
                             </tr>
                             <tr>
-                                <td class="structure-bg-07"><a href="windows/service.html" class="service-link">Центр испытаний стандартизованных изделий</a></td>
-                                <td class="structure-bg-08"><a href="windows/service.html" class="service-link">Центр комплектации и логистики</a></td>
+                                <td class="structure-bg-07"><a href="windows/service.html" class="service-link" rel="list-1" title="Центр испытаний стандартизованных изделий">Центр испытаний стандартизованных изделий</a></td>
+                                <td class="structure-bg-08"><a href="windows/service.html" class="service-link" rel="list-1" title="Центр комплектации и логистики">Центр комплектации и логистики</a></td>
                             </tr>
                             <tr>
-                                <td class="structure-bg-09"><a href="windows/service.html" class="service-link">Центр новых технологий</a></td>
-                                <td class="structure-bg-10"><a href="windows/service.html" class="service-link">Центр сертификации</a></td>
+                                <td class="structure-bg-09"><a href="windows/service.html" class="service-link" rel="list-1" title="Центр новых технологий">Центр новых технологий</a></td>
+                                <td class="structure-bg-10"><a href="windows/service.html" class="service-link" rel="list-1" title="Центр сертификации">Центр сертификации</a></td>
                             </tr>
                             <tr>
-                                <td class="structure-bg-11"><a href="windows/service.html" class="service-link">Центр стандартизации, унификации, каталогизации и метрологического обеспечения</a></td>
-                                <td class="structure-bg-12"><a href="windows/service.html" class="service-link">Центр экономической экспертизы цен</a></td>
+                                <td class="structure-bg-11"><a href="windows/service.html" class="service-link" rel="list-1" title="Центр стандартизации, унификации, каталогизации и метрологического обеспечения">Центр стандартизации, унификации, каталогизации и метрологического обеспечения</a></td>
+                                <td class="structure-bg-12"><a href="windows/service.html" class="service-link" rel="list-1" title="Центр экономической экспертизы цен">Центр экономической экспертизы цен</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <h1>Филиалы</h1>
+                <p>В состав НИИ Стандартизации и Унификации входят ряд филиалов:</p>
+
+                <div class="structure-table-2">
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td class="structure-bg-01"><a href="windows/service-2.html" class="service-link" rel="list-2" title="Тестовое подразделение">Тестовое подразделение</a></td>
                             </tr>
                         </tbody>
                     </table>
